--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "12.9.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
     "motion-dom": "12.22.0",
     "motion-utils": "12.19.0",
-    "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.5.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
@@ -73,8 +73,8 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
     "tw-animate-css": "^1.2.8",
