--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
       "dest": "/index.html"
     }
   ],
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
   "buildCommand": "npm run build",
   "outputDirectory": "dist"
 }
